--- a/2D/test2D1/level1Curved/Makefile
+++ b/2D/test2D1/level1Curved/Makefile
@@ -1,6 +1,6 @@
-FC=ifort #fortran compiler
+FC=gfortran #fortran compiler
 #FC=gfortran
-FFLAGS=-fast
+FFLAGS=
 #-mkl -fast
 #-warn all -check all -stand f18 
 # -g
